# kemdat-encrypt-decrypt

./: .gitignore  README.md  app.py  encrypt-decrypt.py  main.py  pyproject.toml
laporan/: export-markdown.py  main.md
