[project]
name = "kemdat-encrypt-decrypt"
version = "0.1.0"
description = "Aplikasi enkripsi dan dekripsi menggunakan AES-256 CBC mode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.50.0",
    "cryptography>=41.0.0",
    "markdown-pdf>=1.10",
    "markdown2>=2.5.4",
    "pdfkit>=1.0.0",
]
